--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -17,7 +17,9 @@ header{
     align-items: center;
     justify-content: space-between;
     height: 6rem;
-    position: absolute;
+    top: 0;
+    z-index: 999;
+    position: sticky;
 }
 
 header .logo{
